landing p mobile alignment fix

--- a/css/480.css
+++ b/css/480.css
@@ -92,9 +92,10 @@
 
   #landing-text p {
     color: black;
-    font-size: 4vw;
+    font-size: 5vw;
     line-height: 7vw;
     padding-bottom: 5vw;
+    width: 70%;
   }
 
 
